Change "throw" to "attempt" and "up" to "pass" everywhere

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "throw"
+name = "attempt"
 version = "0.1.1-dev"
-authors = ["Dabo Ross <daboross@daboross.net>"]
-description = "Throw is an extension of error handling in rust which adds statically produced stack traces"
+authors = ["Dabo Ross <daboross@daboross.net>, Ivan Dmitrievsky <ivan.dmitrievsky@gmail.com>"]
+description = "Attempt is an extension of error handling in rust which adds statically produced stack traces"
 
-documentation = "https://dabo.guru/rust/throw/"
-repository = "https://github.com/daboross/rust-throw/"
+repository = "https://github.com/idmit/rust-attempt/"
 
 readme = "README.md"
-keywords = ["throw", "error", "catch", "result"]
+keywords = ["attempt", "error", "catch", "result"]
 license = "MIT"
